# rust_slasher

./: Cargo.toml  README.md
src/: main.rs
src/slashers/: central_scan.rs  mod.rs  standard.rs
